fix QR editor on narrow screen

--- a/public/scripts/extensions/quick-reply/style.less
+++ b/public/scripts/extensions/quick-reply/style.less
@@ -244,10 +244,14 @@
 @media screen and (max-width: 750px) {
 	body .dialogue_popup:has(#qr--modalEditor) .dialogue_popup_text > #qr--modalEditor {
 		flex-direction: column;
+		overflow: auto;
+		> #qr--main {
+			flex: 0 0 auto;
+		}
 		> #qr--main > .qr--labels {
 			flex-direction: column;
 		}
-		> #qr--main > .qr--modal-messageContainer > #qr--modal-message {
+		> #qr--main > .qr--modal-messageContainer > #qr--modal-messageHolder {
 			min-height: 90svh;
 		}
 	}
